[gd_scene load_steps=2 format=3 uid="uid://bvbwtqhean2yf"]

[ext_resource type="Script" path="res://addons/fastnoiselite_tool/vector3_input.gd" id="1_legfd"]

[node name="Vector3Input" type="MarginContainer"]
script = ExtResource("1_legfd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X:"

[node name="OffsetXInput" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 8
rounded = true
allow_greater = true
allow_lesser = true
alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Y:"

[node name="OffsetYInput" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 8
rounded = true
allow_greater = true
allow_lesser = true
alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Z:"

[node name="OffsetZInput" type="SpinBox" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 8
rounded = true
allow_greater = true
allow_lesser = true
alignment = 2

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/OffsetXInput" to="." method="_on_offset_x_input_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/OffsetYInput" to="." method="_on_offset_y_input_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/OffsetZInput" to="." method="_on_offset_z_input_value_changed"]
